--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -2,6 +2,8 @@ FROM jenkins/jenkins:lts
 # if we want to install via apt
 USER root
 RUN apt-get update && apt-get install -y maven
+RUN usermod -aG docker jenkins
+
 # drop back to the regular jenkins user - good practice
 USER jenkins
 
