--- a/simple_boot_name/pom.xml
+++ b/simple_boot_name/pom.xml
@@ -69,27 +69,27 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<!--<plugin>-->
-				<!--<groupId>com.spotify</groupId>-->
-				<!--<artifactId>dockerfile-maven-plugin</artifactId>-->
-				<!--<version>1.4.0</version>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<id>default</id>-->
-						<!--<goals>-->
-							<!--<goal>build</goal>-->
-							<!--<goal>push</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-				<!--<configuration>-->
-					<!--<tag>${project.version}</tag>-->
-					<!--<repository>${docker.image.prefix}/${project.artifactId}</repository>-->
-					<!--<buildArgs>-->
-						<!--<JAR_FILE>./target/${project.build.finalName}.jar</JAR_FILE>-->
-					<!--</buildArgs>-->
-				<!--</configuration>-->
-			<!--</plugin>-->
+			<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>dockerfile-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
+						<id>default</id>
+						<goals>
+							<goal>build</goal>
+							<goal>push</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<tag>${project.version}</tag>
+					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<buildArgs>
+						<JAR_FILE>./target/${project.build.finalName}.jar</JAR_FILE>
+					</buildArgs>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
